--- a/stylus.css
+++ b/stylus.css
@@ -6,11 +6,11 @@
 }
 
 body{
-	background: #000000;
-	color: #FFFFFF;
-	background-color: #5dd328;
+	background: #000;
+	color: #fff;
+	background-color: #1e272e;
 	background-color: #2c700d;
-  	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23540606' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  	  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23540606' fill-opacity='0.1'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   	font-size: 16px;
 	font-family: "Oswald", sans-serif;
 }
@@ -56,7 +56,8 @@ ul{
 }
 
 .nav-main ul li a:hover{
-	border-bottom: 2px solid #ffffff;
+	color: #fff;
+	font-weight: bold;
 }
 
 .nav-main ul.nav-menu{
@@ -65,11 +66,11 @@ ul{
 }
 
 hr {
-  margin: 10px;
-  color: #ffffff;
+  margin: 10px 0;
+  
 }
 
-/* CASO PRINCIPAL*/
+/* NOTICIA PRINCIPAL*/
 
 .showcase{
 	width: 100%;
@@ -79,12 +80,100 @@ hr {
 	display: flex;
 	flex-direction: column; 
 	align-items: center;
+	text-align: center;
 	justify-content: flex-end;
+	margin-bottom: 20px;
+  	color: #fff;
 }
 
 .btn{
-	
+	cursor: pointer;
+	display: inline-block;
+	border: 0;
+	font-weight: bold;
+	padding: 10px 20px;
+	background: #262626;
+	color: #fff;
+	font-size: 15px;
+	border: 1px solid #fff;	
+		
 }
 
+.btn:hover{
+	opacity: .9;
+}
+
+.showcase h2,
+.showcase p{
+	margin-bottom: 20px;
+}
+
+
+/* SECCIONES DE NOTICIAS*/
+
+.news-cards{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 15px;
+	margin: 30px 0;
+
+}
+
+.news-cards img{
+	width: 100%;
+	height: 180px;
+}
+.news-cards h3 {
+	font-size: 20px;
+	margin: 10px 0;
+}
+.news-cards a{
+	padding: 10px 0;
+	color: #fff;
+	text-transform: uppercase;
+	display: inline-block;
+	font-weight: bold;
+
+}
+
+.news-cards a:hover{
+	text-decoration: underline;
+}
+
+/* BANNER ONE */
+
+.cards-banner-one{
+	width: 100%;
+	height: 350px;
+	background: url(img/tech-red.jpg);
+	margin-bottom: 40px;
+
+}
+
+.cards-banner-one .content {
+	width: 40%;
+	padding: 90px 0 0 30px;
+	color: #fff;
+}
+
+.cards-banner-one p,
+.cards-banner-two p{
+	margin: 10px;
+}
+
+/* BANNER DOS */
+
+.cards-banner-two{
+	width: 100%;
+	height: 350px;
+	background: url(img/image-five.jpg) no-repeat center center/cover;
+	margin-bottom: 40px;
+}
+
+.cards-banner-two .contenaer {
+	width: 40%;
+	padding: 90px 0 0 30px;
+	color: #fff;
+}
 
 
