--- a/stylus.css
+++ b/stylus.css
@@ -176,4 +176,57 @@ hr {
 	color: #fff;
 }
 
+/* SOCIAL */
+
+.social p{
+	text-align: center;
+	font-size: 30px;
+	margin-bottom: 20px;
+}
+
+.links{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.links a {
+	margin: 0 20px;
+}
+
+.links a i{
+	font-size: 3rem;
+}
+
+/* FOOTER LINKS */
+
+.footer-links{
+	background: #2f3640;
+	color: #616161;
+	font-size: 10px;
+	padding: 35px 0;
+}
+
+.footer-container{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	gap:10px;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+.footer-container ul{
+	margin: 0 auto;
+
+}
+
+.footer-container ul li{
+	line-height: 1.8;
+}
+
+
+
+
+
+
 
